** Modification apporté au fichier CMakePresets.json (terminé)
** création d'un dossier "cmake" pour y placer les fichiers de configuration
** Ajout du module "ShowVar" pour afficher un retour de la configuration
** Ajout du module "VcpkgSetup" pour la détection et intégration automatique de vcpkg
** Ajout du module "Version" pour la gestion de la version du projet"

Version 1.9.2 RC 2
~~~~~~~~~~~~~~~~~~~~
Released: 2025-08-08

Abandon de la création via VSCODE, et la ligne de commande, j'utiliser à présent le logiciel
Visual Studion Enterprise 2022 (beaucoup plus clair)

* Création d'un projet "CMake"
* Mise en place du dépot Git
* Modification apporté au fichier CMakePresets.json (finis)
* Modification apporté au fichier CMakeLists.txt (en cours)

Version 1.9.2 RC 1
~~~~~~~~~~~~~~~~~~~~
Released: 2025-08-08

Ce programe est un dérivé du programme MoneyManagerEx
Recration de la struction du programme afin de décortiquer le Programme d'origine.
pour le moment je suis à l'étape de la création des scripte CMARK permettant de générer la solution.


Version 1.9.1 Beta 1
~~~~~~~~~~~~~~~~~~~~
Released: 2025-02-08

Version 1.9.0
~~~~~~~~~~~~~~~~~~~~
Released: 2025-02-07

Features:
* #7136 Difficulty to revert from 1.9.0 to 1.8.1
* #7131 Balance column gets unreliable when changing the sorting columns
* #7122 The computing of appreciation/depreciation of assets isn't exact
* #7112 Cleanup Appveyor build warnings
* #7109 Sorting transaction by Date and other column which is NOT "ID"
* #7059 Show transactions panel for an account group
* #6966 Enabling INT64 and SUID for MMEX4Desktop
* #6860 Add executions of scheduled transactions in transaction panels

Bugfixes:
* #7178 Account filter setting "View Transaction Report..." is not persistent
* #7175 Adapt new dB version
* #7157 Cash Flow Report for Specific Accounts treats transfers in reverse
* #7142 All Transactions and Scheduled Transactions Menu Items Missing in latest Beta Version