@@ -1,0 +1,3 @@
+#define BUILD_DATE __DATE__
+#define BUILD_TIME __TIME__
+#define GBEX_VERSION_WITH_UNSTABLE "@GBEX_VERSION_WITH_UNSTABLE@"
